# rusty

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  result.md  rustfmt.toml
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: ash-0.37.3+1.3.251.crate  cc-1.2.54.crate  env_filter-0.1.4.crate  futures-intrusive-0.5.0.crate  glow-0.13.1.crate  gpu-descriptor-0.2.4.crate  gpu-descriptor-types-0.1.2.crate  jiff-0.2.18.crate  memmap2-0.9.9.crate  metal-0.27.0.crate  naga-0.19.2.crate  objc_exception-0.1.2.crate  pollster-0.3.0.crate  safetensors-0.4.5.crate  wgpu-0.19.4.crate  wgpu-core-0.19.4.crate  wgpu-hal-0.19.5.crate  wgpu-types-0.19.2.crate  zerocopy-0.8.36.crate  zmij-1.0.17.crate
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/2/: cc
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/a/: ash
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/c/: com
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/bl/oc/: block
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/by/te/: bytemuck_derive
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/co/de/: codespan-reporting
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/co/m_/: com_macros  com_macros_support
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/d3/d1/: d3d12
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/en/v_/: env_filter
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fu/tu/: futures-intrusive
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/gl/_g/: gl_generator
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/gl/ow/: glow
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/gl/ut/: glutin_wgl_sys
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/gp/u-/: gpu-alloc  gpu-allocator  gpu-descriptor  gpu-descriptor-types
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ha/ss/: hassle-rs
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/kh/ro/: khronos-egl  khronos_api
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ma/ll/: malloc_buf
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/me/ta/: metal
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/na/ga/: naga
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ob/jc/: objc  objc_exception
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/po/ll/: pollster
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pr/es/: presser
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/re/nd/: renderdoc-sys
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/sa/fe/: safetensors
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/sl/ot/: slotmap
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/sp/ir/: spirv
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/wg/pu/: wgpu  wgpu-core  wgpu-hal  wgpu-types
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ze/ro/: zerocopy  zerocopy-derive
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/zerocopy-0.8.36/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: build.yml  ci.yml
benchmarks/: Cargo.toml  RESULTS.md  flash_attention_benchmark.rs  gqa_benchmark.rs
benchmarks/src/: main.rs
rusty/: Cargo.toml
rusty-autograd/: Cargo.toml
rusty-autograd/examples/: mixed_precision.rs
rusty-autograd/src/: lib.rs
rusty-backend/: Cargo.toml
rusty-backend/examples/: fused_op.rs  init_wgpu.rs  ops_test.rs  tensor_creation.rs
rusty-backend/src/: cast.wgsl  cast_bf16.wgsl  error.rs  flash_attention_v2.wgsl  flash_attention_v2_backward.wgsl  flash_attention_v2_backward_optimized.wgsl  flash_attention_v2_bf16.wgsl  flash_attention_v2_f16.wgsl  kernels.wgsl  lib.rs  matmul_bf16.wgsl  matmul_f16.wgsl  pool.rs
rusty-backend/tests/: bf16_test.rs
rusty-cli/: Cargo.toml
rusty-cli/src/: main.rs
rusty-compiler/: Cargo.toml
rusty-graph/: Cargo.toml
rusty-graph/examples/: llama_block.rs
rusty-graph/src/: flash_attention.rs  lfm.rs  lib.rs  model_builder.rs
rusty-graph/tests/: flash_attention_correctness.rs
rusty-hub/: Cargo.toml
rusty-hub/src/: config.rs  lib.rs  models.rs
rusty-loader/: Cargo.toml
rusty-loader/examples/: gen_dummy.rs  load_and_run.rs  read_tensor.rs
rusty-loader/src/: lib.rs  tokenizer.rs
rusty-monitor/: Cargo.toml
rusty-monitor/examples/: tui_demo.rs
rusty-monitor/src/: lib.rs
rusty-trainer/: Cargo.toml
rusty-trainer/src/: checkpoint.rs  data.rs  demo.rs  lib.rs  scaler.rs
rusty/examples/: README.md  basic_tensor.rs  basic_training.rs  flash_attention.rs  flash_attention_advanced.rs  lora_finetune.rs
rusty/src/: device.rs  functional.rs  lib.rs  serialize.rs
rusty/src/backend/: compute.rs  kernels.rs  mod.rs
rusty/src/data/: dataloader.rs  dataset.rs  mod.rs
rusty/src/nn/: activation.rs  attention.rs  container.rs  embedding.rs  linear.rs  mod.rs  module.rs  normalization.rs
rusty/src/optim/: adam.rs  mod.rs  optimizer.rs  sgd.rs
rusty/src/tensor/: autograd.rs  core.rs  mod.rs  ops.rs
scripts/: download_model.sh  verify.sh
tests/: flash_grad_check.rs
