[workspace]
members = [
    "rusty",
    "rusty-loader",
    "rusty-graph",
    "rusty-backend",
    "rusty-cli",
    "rusty-autograd",
    "rusty-trainer",
    "rusty-hub",
    "benchmarks",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/puranikyashaswin/rusty"
