[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-backend = { path = "../rusty-backend" }
rusty-graph = { path = "../rusty-graph" }
rusty-loader = { path = "../rusty-loader" }
rusty-autograd = { path = "../rusty-autograd" }
rusty-trainer = { path = "../rusty-trainer" }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"
