[package]
name = "rusty-hub"
version = "0.1.0"
edition = "2021"
description = "HuggingFace Hub integration for Rusty ML Framework"

[dependencies]
rusty-backend = { path = "../rusty-backend" }
rusty-graph = { path = "../rusty-graph" }
rusty-loader = { path = "../rusty-loader" }
rusty-autograd = { path = "../rusty-autograd" }

# Use existing workspace dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
