[package]
name = "rusty-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
safetensors = "0.4"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusty-backend = { path = "../rusty-backend" }
env_logger = "0.11"
pollster = "0.3"
bytemuck = "1.14"
rand = "0.8"
