[package]
name = "rusty-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-backend = { path = "../rusty-backend" }
rusty-autograd = { path = "../rusty-autograd" }
rusty-graph = { path = "../rusty-graph" }
rusty-loader = { path = "../rusty-loader" }
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

